quick fix for padding on mobile

--- a/stylesheets/_components.scss
+++ b/stylesheets/_components.scss
@@ -52,7 +52,7 @@ $lato-font: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 #registration {
-	margin-left: 75px;
+	margin-left: 10%;
 	text-align: left;
 	font-size: 1.1em;
 
